@@ -23,6 +23,9 @@ update-manager (1:0.131) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgrade.cfg:
     - add laptop-mode-tools to the forced obsoletes on upgrade (thanks to
       Steve Langasek)
+  * UpdateManager/UpdateManager.py:
+    - show restart required dialog in u-m when the upgrade is finished
+      with proper parent
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 03 Nov 2009 16:05:01 +0100
 
